syntax="proto3";

option go_package ="./proto";


package s3_bucket;

service S3Service{
  rpc UploadImageFromFile(UploadImageFileRequest) returns (UploadImageResponse);
  rpc UploadImageFromURL(UploadImageURLRequest) returns (UploadImageResponse);
}

message NoParam{};

message UploadImageFileRequest {
  ObjectParams meta = 1;
  bytes data = 2;
}

message UploadImageURLRequest {
  ObjectParams meta = 1;
  string url = 2;
}

message ObjectParams {
  int32 objectID = 1;
  string bucketName = 2;
  string format = 3; // png jpeg etc..
}

message UploadImageResponse {
  string imageURL = 1;
}
